<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/button_reinitialiser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/reset" />

    <item
        android:id="@+id/button_ajout_objet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/addObject" />

    <item
        android:id="@+id/button_ajout_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/addConnection" />

    <item
        android:id="@+id/button_modification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/modify" />

</menu>