<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bitIcon1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Nom"
        android:hint="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/listCouleurs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/editTextNom"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/butCol1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listIcones"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/listCouleurs">

        <ImageButton
            android:id="@+id/butIcon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonAnnuler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonValider"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextNom" />

    <Button
        android:id="@+id/buttonValider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAnnuler"
        app:layout_constraintTop_toTopOf="@+id/buttonAnnuler" />

    <Button
        android:id="@+id/buttonSupprimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/delete"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonAnnuler"
        app:layout_constraintTop_toBottomOf="@+id/buttonValider"
        app:layout_constraintTop_toTopOf="@+id/buttonAnnuler" />
</androidx.constraintlayout.widget.ConstraintLayout>